@@ -1,3 +1,15 @@
+2021-06-25  Philippe Normand  <pnormand@igalia.com>
+
+        [GStreamer] Build warnings in AudioFileReader since r279123
+        https://bugs.webkit.org/show_bug.cgi?id=227348
+
+        Reviewed by Xabier Rodriguez-Calvar.
+
+        Simplify the code handling the giostreamsrc creation, now that it is the only option possible.
+
+        * platform/audio/gstreamer/AudioFileReaderGStreamer.cpp:
+        (WebCore::AudioFileReader::decodeAudioForBusCreation):
+
 2021-06-25  Commit Queue  <commit-queue@webkit.org>
 
         Unreviewed, reverting r279266.
